--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
       <li></li>
       <li></li>
     </ol>
+    <p>
+      Click <a href="mailto:zikorachimdieaekwe@gmail.com">my email</a> to
+      contact me
+    </p>
   </body>
 </html>
