--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <li></li>
     </ol>
     <p>
-      Click <a href="mailto:zikorachimdieaekwe@gmail.com">my email</a> to
-      contact me
+      Click <a href="mailto:zikorachimdieaekwe@gmail.com">here</a> to contact me
     </p>
+    <p>Click <a href="PeopleAndweights.csv">here</a> to view my new dataset</p>
   </body>
 </html>
