--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
       Click <a href="mailto:zikorachimdieaekwe@gmail.com">here</a> to contact me
     </p>
     <p>Click <a href="PeopleAndweights.csv">here</a> to view my new dataset</p>
+    <p>
+      Click <a href="CSVFile.PY">here</a> to view the Python file I used to
+      build my dataset
+    </p>
   </body>
 </html>
