--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <li></li>
       <li></li>
     </ol>
+    <p class="note">
+      ENTRIES 10 THROUGH TO 20 ARE LEFT BLANK BECAUSE THEY ARE STILL A WORK IN
+      PROGRESS
+    </p>
     <p>
       Click <a href="mailto:zikorachimdieaekwe@gmail.com">here</a> to contact me
     </p>
