--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
       Click <a href="CSVFile.PY">here</a> to view the Python file I used to
       build my dataset
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+      expedita, ea non beatae voluptates consequatur, totam ipsam a facere ipsum
+      quia nihil itaque perspiciatis voluptas quibusdam officia tenetur cum
+      dicta!
+    </p>
   </body>
 </html>
