--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li></li>
     </ol>
     <p class="note">
-      ENTRIES 10 THROUGH TO 20 ARE LEFT BLANK BECAUSE THEY ARE STILL A WORK IN
+      ENTRIES 10 THROUGH TO 20 ARE LEFT BLANK DUE TO THEM BEING A WORK IN
       PROGRESS
     </p>
     <p>
