--- a/index.html
+++ b/index.html
@@ -50,5 +50,31 @@
       quia nihil itaque perspiciatis voluptas quibusdam officia tenetur cum
       dicta!
     </p>
+    <blockquote
+      class="tiktok-embed"
+      cite="https://www.tiktok.com/@candaceoshow/video/7393112200711540014"
+      data-video-id="7393112200711540014"
+      style="max-width: 605px; min-width: 325px"
+    >
+      <section>
+        <a
+          target="_blank"
+          title="@candaceoshow"
+          href="https://www.tiktok.com/@candaceoshow?refer=embed"
+          >@candaceoshow</a
+        >
+        <p>
+          The media harassment campaign of Bella Hadid has me really angry right
+          now. Does anyone else know her family story?
+        </p>
+        <a
+          target="_blank"
+          title="♬ original sound - Candace Owens"
+          href="https://www.tiktok.com/music/original-sound-7393112200338082602?refer=embed"
+          >♬ original sound - Candace Owens</a
+        >
+      </section>
+    </blockquote>
+    <script async src="https://www.tiktok.com/embed.js"></script>
   </body>
 </html>
