--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="Script.js"></script>
   </head>
   <body>
+    <table>
+      <thead>
+        <tr>
+          <th><a href="index.html">Home</a></th>
+          <th><a href="About.html">About</a></th>
+        </tr>
+      </thead>
+    </table>
+    <ol class="navbar"></ol>
     <h1>Countries I Like | 20</h1>
     <hr />
     <ol>
