--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         </tr>
       </thead>
     </table>
-    <ol class="navbar"></ol>
     <h1>Countries I Like | 20</h1>
     <hr />
     <ol>
@@ -29,6 +28,7 @@
       <li>Republic of Cuba</li>
       <li>The Socialist Republic of Vietnam</li>
       <li>Democratic People's Republic of Korea</li>
+      <li>Moldova</li>
       <li></li>
       <li></li>
       <li></li>
@@ -38,11 +38,10 @@
       <li></li>
       <li></li>
       <li></li>
-      <li></li>
-      <li></li>
+      <li>United Kingdom</li>
     </ol>
     <p class="note">
-      ENTRIES 10 THROUGH TO 20 ARE LEFT BLANK DUE TO THEM BEING A WORK IN
+      ENTRIES 11 THROUGH TO 19 ARE LEFT BLANK DUE TO THEM BEING A WORK IN
       PROGRESS
     </p>
     <p>
