--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
     </table>
     <h1>About Our Cause</h1>
     <hr />
-    <p>
+    <!-- <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas est id
       officiis repudiandae, asperiores numquam molestiae reprehenderit sed sit
       distinctio, labore hic quo corrupti ullam sunt exercitationem excepturi
@@ -26,6 +26,8 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat doloremque
       placeat magnam vel, quos maiores amet! Modi mollitia neque asperiores
       minima nemo suscipit nam debitis dolores maxime! Error, cupiditate? Rerum.
-    </p>
+    </p> -->
+    <p>This is a paragraph.</p>
+    <p>This is a paragraph.</p>
   </body>
 </html>
