--- a/About.html
+++ b/About.html
@@ -16,18 +16,71 @@
     </table>
     <h1>About Our Cause</h1>
     <hr />
-    <!-- <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas est id
-      officiis repudiandae, asperiores numquam molestiae reprehenderit sed sit
-      distinctio, labore hic quo corrupti ullam sunt exercitationem excepturi
-      itaque fuga!
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat doloremque
-      placeat magnam vel, quos maiores amet! Modi mollitia neque asperiores
-      minima nemo suscipit nam debitis dolores maxime! Error, cupiditate? Rerum.
-    </p> -->
-    <p>This is a paragraph.</p>
-    <p>This is a paragraph.</p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod
+      accusantium assumenda eos libero maxime, ut nobis dolorem saepe odit alias
+      cumque perspiciatis, explicabo nesciunt accusamus natus enim eligendi
+      illo!
+    </p>
   </body>
 </html>
